# sourceview

./: .gitignore  .travis.yml  Cargo.toml  Gir.toml  Makefile  README.md  appveyor.yml  build.rs  gir-sourceview.toml
.github/workflows/: CI.yml
examples/: autocomplete_words.rs  custom_autocompletion_subclass.rs  plain_sourceview.rs
sourceview-sys/: Cargo.toml  Gir.toml  build.rs  versions.txt
sourceview-sys/src/: lib.rs
sourceview-sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: completion.rs  completion_info.rs  completion_provider.rs  file_loader.rs  file_saver.rs  gutter.rs  lib.rs  mark_attributes.rs  region_iter.rs  rt.rs  style.rs  view.rs
src/auto/: buffer.rs  completion.rs  completion_context.rs  completion_info.rs  completion_item.rs  completion_proposal.rs  completion_provider.rs  completion_words.rs  encoding.rs  enums.rs  file.rs  file_loader.rs  file_saver.rs  flags.rs  gutter.rs  gutter_renderer.rs  gutter_renderer_pixbuf.rs  gutter_renderer_text.rs  language.rs  language_manager.rs  map.rs  mark.rs  mark_attributes.rs  mod.rs  print_compositor.rs  region.rs  search_context.rs  search_settings.rs  space_drawer.rs  style.rs  style_scheme.rs  style_scheme_chooser.rs  style_scheme_chooser_button.rs  style_scheme_chooser_widget.rs  style_scheme_manager.rs  tag.rs  undo_manager.rs  view.rs
src/subclass/: completion_provider.rs  mod.rs
tests/: check_gir.rs
