[package]
name = "sourceview"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["gdk", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/sourceview/"
version = "0.6.0"
description = "Rust bindings for the GtkSourceView 3 library"
repository = "https://github.com/gtk-rs/sourceview"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/sourceview", service = "github" }
travis-ci = { repository = "gtk-rs/sourceview" }

[lib]
name = "sourceview"

[features]
v3_0 = []
v3_10 = ["v3_0", "gtk-source-sys/v3_10"]
v3_12 = ["v3_10", "gtk-source-sys/v3_12"]
v3_14 = ["v3_12", "gtk-source-sys/v3_14"]
v3_16 = ["v3_14", "gtk-source-sys/v3_16"]
v3_18 = ["v3_16", "gtk-source-sys/v3_18"]
v3_20 = ["v3_18", "gtk-source-sys/v3_20"]
v3_22 = ["v3_20", "gtk-source-sys/v3_22"]
v3_24 = ["v3_22", "gtk-source-sys/v3_24"]
default = ["v3_0"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gtk/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gtk/embed-lgpl-docs"]
dox = ["gtk/dox", "gtk-source-sys/dox"]
futures = ["futures-preview", "fragile", "gio/futures"]

[build-dependencies.gtk-rs-lgpl-docs]
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.fragile]
version = "0.3"
optional = true

[dependencies.futures-preview]
version = "0.3.0-alpha"
optional = true

[dependencies.gtk-source-sys]
path = "./sourceview-sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gdk-pixbuf"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dev-dependencies]
gir-format-check = "^0.1"
