[package]
name = "sourceview"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["sourceview", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/sourceview/"
version = "0.8.0"
description = "Rust bindings for the GtkSourceView 3 library"
repository = "https://github.com/gtk-rs/sourceview"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/sourceview", service = "github" }
travis-ci = { repository = "gtk-rs/sourceview" }

[lib]
name = "sourceview"

[features]
v3_0 = []
v3_10 = ["v3_0", "gtk-source-sys/v3_10"]
v3_12 = ["v3_10", "gtk-source-sys/v3_12"]
v3_14 = ["v3_12", "gtk-source-sys/v3_14"]
v3_16 = ["v3_14", "gtk-source-sys/v3_16"]
v3_18 = ["v3_16", "gtk-source-sys/v3_18"]
v3_20 = ["v3_18", "gtk-source-sys/v3_20"]
v3_22 = ["v3_20", "gtk-source-sys/v3_22"]
v3_24 = ["v3_22", "gtk-source-sys/v3_24"]
default = ["v3_0"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gtk/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gtk/embed-lgpl-docs"]
dox = ["gtk/dox", "gtk-source-sys/dox"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[dependencies]
bitflags = "1.0"
libc = "0.2"
cairo-rs = "0.8.0"
gobject-sys = "0.9.1"
gdk = "0.12.0"
gdk-sys = "0.9.1"
glib = "0.9.0"
glib-sys = "0.9.1"
gdk-pixbuf = "0.8.0"
gtk-source-sys = "0.9.1"
gdk-pixbuf-sys = "0.9.1"
pango = "0.8.0"
gio = "0.8.0"
gio-sys = "0.9.1"
gtk = "0.8.0"
gtk-sys = "0.9.1"

[dev-dependencies]
gir-format-check = "^0.1"
