[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.7.0"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.7.0"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.7.0"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.7.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.7.0"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.7.0"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.7.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_24 = ["v3_22"]
v3_4 = []
v3_8 = ["v3_4"]

[lib]
name = "gtk_source_sys"

[package]
build = "build.rs"
links = "gtk_source"
name = "gtk-source-sys"
version = "0.7.0"
