[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
cairo-sys-rs = "0.9.1"
gdk-pixbuf-sys = "0.9.1"
gdk-sys = "0.9.1"
gio-sys = "0.9.1"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
gtk-sys = "0.9.1"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v3_4 = []
v3_8 = ["v3_4"]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_24 = ["v3_22"]
dox = []

[lib]
name = "gtk_source_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtksourceview-3"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome", "sourceview"]
license = "MIT"
links = "gtk_source"
name = "gtk-source-sys"
repository = "https://github.com/gtk-rs/sourceview"
version = "0.9.1"
[package.metadata.docs.rs]
features = ["dox"]
