[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.10.0"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v3_4 = []
v3_8 = ["v3_4"]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_24 = ["v3_22"]
dox = []

[lib]
name = "gtk_source_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtksourceview-3"
homepage = "https://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome", "sourceview"]
license = "MIT"
links = "gtk_source"
name = "gtk-source-sys"
repository = "https://github.com/gtk-rs/sourceview"
version = "0.10.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gtksourceview_3_0]
name = "gtksourceview-3.0"
version = "3.0"

[package.metadata.system-deps.gtksourceview_3_0.feature-versions]
v3_4 = "3.4"
v3_8 = "3.8"
v3_10 = "3.10"
v3_12 = "3.12"
v3_14 = "3.14"
v3_16 = "3.16"
v3_18 = "3.18"
v3_20 = "3.20"
v3_22 = "3.22"
v3_24 = "3.24"
